apps/home-automation/grafana/overlays/homelab/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: grafana.support4u.se
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
                service:
                  name: grafana-service
                  port:
                    number: 3000
